# bragr

./: .gitignore  README.md  cookiecutter.json  generate_wrapper.py  meson.build  setup_env.sh
hooks/: post_gen_project.py
src/: xcorr_lite.cu  xcorr_lite.h
templates/: ctypes_command.tpl  war_structbf.tpl  war_structbf_replace.tpl
{{cookiecutter.directory_name}}/: meson.build
{{cookiecutter.directory_name}}/testbench/: test_{{cookiecutter.plugin_name}}.py
{{cookiecutter.plugin_name}}/: README.md  generate_wrapper.py  meson.build  meson_options.txt  setup_env.sh  wrap_bifrost_plugin.py
{{cookiecutter.plugin_name}}/src/: {{cookiecutter.__snake_name}}.c  {{cookiecutter.__snake_name}}.cu  {{cookiecutter.__snake_name}}.h  {{cookiecutter.__snake_name}}.py
{{cookiecutter.plugin_name}}/testbench/: test_{{cookiecutter.__snake_name}}.py  test_{{cookiecutter.plugin_name}}.py
